--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/poke"
+    >
+
+    <EditText
+        android:id="@+id/eText1"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tView1"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="-74dp"
+        android:layout_marginStart="17dp"
+        android:hint="Enter Rank Of Pokemon"
+        android:inputType="number" />
+
+
+    <ImageButton
+        android:id="@+id/button3"
+        android:layout_width="84dp"
+        android:layout_height="49dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_search"
+        android:background="#0000"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/tView1"
+        android:layout_width="148dp"
+        android:layout_height="43dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:textColor="#FFFFFF"
+        android:layout_marginEnd="47dp"
+        android:layout_marginTop="93dp"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
-</android.support.constraint.ConstraintLayout>
+
+    <ImageButton
+        android:id="@+id/button"
+        android:layout_width="77dp"
+        android:layout_height="47dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_92946_234755_arrow_left"
+        android:background="#0000"
+        />
+
+    <ImageButton
+
+        android:id="@+id/button2"
+        android:src="@drawable/ic_arrows_right_arrow_icon"
+        android:textSize="17sp"
+        android:layout_width="77dp"
+        android:layout_height="47dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:background="#0000"
+      />
+
+
+    <ImageView
+        android:id="@+id/iView"
+        android:layout_width="149dp"
+        android:layout_height="151dp"
+        android:layout_alignStart="@+id/eText1"
+        android:layout_alignTop="@+id/tView1" />
+
+    <TextView
+        android:id="@+id/tView2"
+        android:textColor="#FFFFFF"
+        android:layout_width="79dp"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="154dp"
+        android:layout_toEndOf="@+id/button3"
+        android:textSize="25sp" />
+
+    <ScrollView
+        android:layout_width="331dp"
+        android:layout_height="191dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="6dp"
+        android:layout_marginStart="23dp">
+
+
+        <TextView
+            android:id="@+id/tView3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="38dp"
+            android:textStyle="bold"
+            />
+
+    </ScrollView>
+
+</RelativeLayout>
